getValuesBlock with lyrs argument. Reported by Antoine Stevens
In approxNA with large files NAs were ignored and the NArule was ignored. Reported by Pablo Timoner
isValid(raster()) failed. Reported by dww on http://stackoverflow.com/questions/37869271/how-to-dput-a-raster/37871930
zapply passes on ... arguments to stackApply

--- 31-May-2016, version: 2.5-8
new functions for Raster objects: as.integer, as.list
new functions whiches.min and whiches.max (to get all layers that are which.min/max)
added 'forcefun' argument to overlay
atan2 now available for all Raster objects
several minor fixes

--- 19-December-2015, version: 2.5-2
Bug fixes:
The order of the layers returned by stackApply was only as expected of the indices were sorted from 1 to n. Reported by Mark Payne
rasterize(..., getCover=TRUE) again did not work properly. Reported by Pascal Title
as.vector gave trouble on different version (R-devel vs. R-current). Work around implemented.

--- 10-December-2015, version: 2.4-30
package ncdf is now obsolete and no longer supported (use ncdf4 instead)
Major bug fixes:
Extraction of values with xy or cellnumber from a ncdf file where 'level' is the fourth variable (and time third, in stead of the other way around) did not work correctly. Reported by John Gross
rasterize(..., getCover=TRUE) did not work properly. Reported by Sam Tomlinso
Minor bug fixes:
in rasterFromXYZ (by Gareth Davies)
in crop (by Florian Detsch)
in stack (http://stackoverflow.com/questions/32564932/r-import-two-or-more-selected-bands-from-an-image-stack)
in sampleStratified (by Antoine Stevens)

--- 8-September-2015, version: 2.4-20
Andrei Mirt send a bug fix for corLocal
namespace now captures all functions from other packages
.nchar to replace nchar to avoid R version problem
Sebastian Bock reported a bug in raster:::.circular.weight
various minor fixes

--- 2-July-2015, version: 2.4-15